@@ -23,6 +23,7 @@ Version 1.3.rc1 (2011-??-??)
 - Added indexing of products for the Contao search module (#2105)
 - Added automatic currency conversion routines (including Hooks for data providers)
 - Added new hook generateFilters (#2146)
+- Added inserttag to retrieve data of the current product or a certain product id (#2047)
 - Improved: loading products is now centralized in IsotopeFrontend static functions
 - Improved: "Loading product data" is now in the language file (#2215)
 - Improved: Removed size and added maxlength attribute to quantity input fields (#2118)
